@@ -27,7 +27,7 @@ use Torrus::Log;
 
 
 $Torrus::DevDiscover::registry{'CiscoIOS'} = {
-    'sequence'     => 500,
+    'sequence'     => 510,
     'checkdevtype' => \&checkdevtype,
     'discover'     => \&discover,
     'buildConfig'  => \&buildConfig
